--- a/web/faq.html
+++ b/web/faq.html
@@ -27,56 +27,55 @@ permalink: "{{ page.filePathStem }}.html"
     &lt;dependency&gt;
       &lt;groupId&gt;com.github.haifengl&lt;/groupId&gt;
       &lt;artifactId&gt;smile-core&lt;/artifactId&gt;
-      &lt;version&gt;2.5.0&lt;/version&gt;
+      &lt;version&gt;2.5.1&lt;/version&gt;
     &lt;/dependency&gt;
     </code></pre>
 
     <p>If you're using Gradle, add the following line into your build
         file's <code>dependencies</code> section:</p>
     <pre><code>
-    implementation("com.github.haifengl:smile-core:2.5.0")
+    implementation("com.github.haifengl:smile-core:2.5.1")
     </code></pre>
 
     <p>If you're using SBT, add the following line into your build file:</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" % "smile-core" % "2.5.0"
+    libraryDependencies += "com.github.haifengl" % "smile-core" % "2.5.1"
     </code></pre>
 
     <p>For Scala API,</p>
     <pre><code>
-    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "2.5.0"
+    libraryDependencies += "com.github.haifengl" %% "smile-scala" % "2.5.1"
     </code></pre>
 
-    <p>To enable machine optimised matrix computation, the users should
-        make their machine-optimised libblas3 (CBLAS) and liblapack3 (Fortran)
-        available as shared libraries at runtime. This module employs the highly efficient
-        <a href="https://github.com/fommil/netlib-java#netlib-java">netlib-java</a>
-        library.</p>
-
-    <h5>OS X</h5>
-    <p>Apple OS X requires no further setup as it ships with the veclib framework.</p>
-
-    <h5>Linux</h5>
-    <p>Generically-tuned ATLAS and OpenBLAS are available with most distributions
-        and must be enabled explicitly using the package-manager. For example,</p>
-
+    <p>Some algorithms rely on BLAS and LAPACK (e.g. manifold learning,
+        some clustering algorithms, Gaussian Process regression, MLP, etc).
+        To use these algorithms, you should include OpenBLAS for optimized
+        matrix computation:</p>
     <pre><code>
-    sudo apt-get install libatlas3-base libopenblas-base
-    sudo update-alternatives --config libblas.so
-    sudo update-alternatives --config libblas.so.3
-    sudo update-alternatives --config liblapack.so
-    sudo update-alternatives --config liblapack.so.3
+    libraryDependencies ++= Seq(
+      "org.bytedeco" % "javacpp"   % "1.5.3"       classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier "android-arm64" classifier "ios-arm64",
+      "org.bytedeco" % "openblas"  % "0.3.9-1.5.3" classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier "android-arm64" classifier "ios-arm64",
+      "org.bytedeco" % "arpack-ng" % "3.7.0-1.5.3" classifier "macosx-x86_64" classifier "windows-x86_64" classifier "linux-x86_64" classifier "linux-arm64" classifier "linux-ppc64le" classifier ""
+    )
     </code></pre>
 
-    <p>However, these are only generic pre-tuned builds. If you have an Intel MKL licence,
-    you could also create symbolic links from libblas.so.3 and liblapack.so.3 to libmkl_rt.so
-    or use Debian's alternatives system.</p>
+    <p>In this example, we include all supported 64-bit platforms and filter
+        out 32-bit platforms. The user should include only the needed platforms
+        to save spaces.</p>
 
-    <h5>Windows</h5>
-    <p>The native_system builds expect to find libblas3.dll and liblapack3.dll
-        on the %PATH% (or current working directory). Besides vendor-supplied
-        implementations, OpenBLAS provide generically tuned binaries, and it
-        is possible to build ATLAS.</p>
+    <p>If you prefer other BLAS implementations, you can use any library found
+        on the "java.library.path" or on the class path, by specifying it with
+        the "org.bytedeco.openblas.load" system property. For example, to use
+        the BLAS library from the Accelerate framework on Mac OS X, we can pass
+        options such as `-Djava.library.path=/usr/lib/ -Dorg.bytedeco.openblas.load=blas`.</p>
+
+    <p>For a default installation of MKL that would be `-Dorg.bytedeco.openblas.load=mkl_rt`.
+        Or you may simply include `smile-mkl` module in your project, which
+        includes MKL binaries. With `smile-mkl` module in the class path, Smile
+        will automatically switch to MKL.</p>
+    <pre><code>
+    libraryDependencies += "com.github.haifengl" %% "smile-mkl" % "2.5.1"
+    </code></pre>
 
     <h2 class="question" id="model-serialization">Model serialization</h2>
     <p class="answer">To serialize a model, you may use</p>
