--- a/web/index.html
+++ b/web/index.html
@@ -219,6 +219,15 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/sequence/CRF.html">Conditional Random Field</a>
       </p></dd>
 
+      <dt><a href="api/java/smile/timeseries/package-summary.html">Time Series</a></dt>
+      <dd><p>
+        <a href="api/java/smile/timeseries/TimeSeries.html#acf-double:A-int-">ACF</a>,
+        <a href="api/java/smile/timeseries/TimeSeries.html#pacf-double:A-int-">PACF</a>,
+        <a href="api/java/smile/timeseries/BoxTest.html">Box-Pierce and Ljung-Box Test</a>,
+        <a href="api/java/smile/timeseries/AR.html">AR</a>,
+        <a href="api/java/smile/timeseries/ARMA.html">ARMA</a>
+      </p></dd>
+
       <dt><a href="api/scala/index.html#smile.nlp.package">Natural Language Processing</a></dt>
       <dd><p>
         <a href="api/java/smile/nlp/tokenizer/SimpleSentenceSplitter.html">Sentence Splitter</a>,
