--- a/web/index.html
+++ b/web/index.html
@@ -99,7 +99,8 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/regression/RBFNetwork.html">RBF Networks</a>,
         <a href="api/java/smile/regression/MLP.html">Neural Networks</a>,
         <a href="api/java/smile/regression/SVR.html">Support Vector Regression</a>,
-        <a href="api/java/smile/regression/GaussianProcessRegression.html">Gaussian Process</a>
+        <a href="api/java/smile/regression/GaussianProcessRegression.html">Gaussian Process</a>,
+        <a href="api/java/smile/glm/GLM.html">Generalized Linear Model</a>
       </p></dd>
 
       <dt><a href="api/java/smile/feature/package-summary.html">Feature Engineering and Selection</a></dt>
