link to LogLoss, CrossEntropy and R2

--- a/web/index.html
+++ b/web/index.html
@@ -135,9 +135,11 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/validation/LOOCV.html">Leave-One-Out Validation</a>,
         <a href="api/java/smile/validation/Bootstrap.html">Bootstrap</a>,
         <a href="api/java/smile/validation/ConfusionMatrix.html">Confusion Matrix</a>,
+        <a href="api/java/smile/validation/AUC.html">AUC</a>,
+        <a href="api/java/smile/validation/LogLoss.html">LogLoss</a>,
+        <a href="api/java/smile/validation/CrossEntropy.html">CrossEntropy</a>,
         <a href="api/java/smile/validation/Accuracy.html">Accuracy</a>,
         <a href="api/java/smile/validation/Error.html">Error</a>,
-        <a href="api/java/smile/validation/AUC.html">AUC</a>,
         <a href="api/java/smile/validation/Fallout.html">Fallout</a>,
         <a href="api/java/smile/validation/FDR.html">FDR</a>,
         <a href="api/java/smile/validation/FMeasure.html">F-Score</a>,
@@ -149,6 +151,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a href="api/java/smile/validation/MSE.html">MSE</a>,
         <a href="api/java/smile/validation/RMSE.html">RMSE</a>,
         <a href="api/java/smile/validation/RSS.html">RSS</a>,
+        <a href="api/java/smile/validation/R2.html">R2</a>,
         <a href="api/java/smile/validation/MeanAbsoluteDeviation.html">Mean Absolute Deviation</a>,
         <a href="api/java/smile/validation/RandIndex.html">Rand Index</a>,
         <a href="api/java/smile/validation/AdjustedRandIndex.html">Adjusted Rand Index</a>,
