update JShell pre-import

--- a/web/quickstart.html
+++ b/web/quickstart.html
@@ -262,7 +262,7 @@ smile&gt;
     javax.swing.SwingUtilities.invokeLater(() -> smile.demo.SmileDemo.createAndShowGUI(false))
     </code></pre>
 
-            <p>Different from Smile Shell, we don't pre-import any Smile's definitions in JShell.</p>
+            <p>Similar to Smile Shell, we pre-import Smile's definitions in JShell.</p>
 
             <h3 id="calculator_java">Calculator</h3>
 
